kubernetes/apps/components/nfsserver/meddle/ca-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ca-provider
  labels:
    app: ca-provider
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ca-provider
  template:
    metadata:
      labels:
        app: ca-provider
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: tls-certs
              mountPath: /usr/share/nginx/html/ca.crt
              subPath: ca.crt
              readOnly: true
      volumes:
        - name: tls-certs
          secret:
            secretName: nfs-tls-certs
