kubernetes/apps/components/nfsserver/meddle/ca-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ca-provider-svc
spec:
  selector:
    app: ca-provider
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
