kubernetes/apps/components/nfsserver/meddle/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nfsserver-svc
  labels:
    app: nfsserver
  annotations:
    external-dns.alpha.kubernetes.io/hostname: nfs.home.parents-basement.win
spec:
  selector:
    app: nfsserver
  ports:
    - name: nfs-tcp
      port: 2049
      targetPort: 2049
      protocol: TCP
    - name: nfs-udp
      port: 2049
      targetPort: 2049
      protocol: UDP
  type: LoadBalancer
